# P2P-Chat

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh
include/audio/: audio_engine.h
include/core/: session.h  types.h
include/network/: p2p_connection.h  signaling.h  stun_client.h  turn_client.h  udp_socket.h
include/protocol/: protocol.h
include/ui/: chat_window.h
src/: main.cpp  server_main.cpp
src/audio/: audio_engine.cpp
src/core/: session.cpp  types.cpp
src/network/: p2p_connection.cpp  signaling.cpp  stun_client.cpp  turn_client.cpp  udp_socket.cpp
src/protocol/: protocol.cpp
src/ui/: chat_window.cpp
tests/: CMakeLists.txt  integration_test.cpp
